fix high contrast bugs

--- a/OfficeApp3Web/Content/AppWord.css
+++ b/OfficeApp3Web/Content/AppWord.css
@@ -69,3 +69,11 @@ li.listItem:hover{
 .snippetbuttonclass {
     background-color: #2b579a;
 }
+
+@media screen and (-ms-high-contrast:active)
+{
+    li.listItem {
+    background-color:#2b579a;
+    color:white;
+    }
+}
